WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154230
XMLHttpRequest / XMLHttpRequestUpload should inherit XMLHttpRequestEventTarget
https://bugs.webkit.org/show_bug.cgi?id=154230
Summary
XMLHttpRequest / XMLHttpRequestUpload should inherit XMLHttpRequestEventTarget
Chris Dumez
Reported
2016-02-14 18:33:30 PST
XMLHttpRequest / XMLHttpRequestUpload should inherit XMLHttpRequestEventTarget
Attachments
WIP Patch
(19.10 KB, patch)
2016-02-14 21:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(44.17 KB, patch)
2016-02-14 22:18 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-02-14 19:58:46 PST
Both Firefox and Chrome implement XMLHttpRequestEventTarget and expose it on the global Window object.
Chris Dumez
Comment 2
2016-02-14 21:55:28 PST
Created
attachment 271325
[details]
WIP Patch
WebKit Commit Bot
Comment 3
2016-02-14 21:57:47 PST
Attachment 271325
[details]
did not pass style-queue: ERROR: Source/WebCore/xml/XMLHttpRequestEventTarget.h:34: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4
2016-02-14 22:18:57 PST
Created
attachment 271326
[details]
Patch
Alex Christensen
Comment 5
2016-02-15 13:08:43 PST
Comment on
attachment 271326
[details]
Patch r=me. As I've been glancing at the XHR spec, I've wondered why we didn't have this and couldn't think of a good reason other than "nobody's done it yet".
WebKit Commit Bot
Comment 6
2016-02-15 14:03:04 PST
Comment on
attachment 271326
[details]
Patch Clearing flags on attachment: 271326 Committed
r196599
: <
http://trac.webkit.org/changeset/196599
>
WebKit Commit Bot
Comment 7
2016-02-15 14:03:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug